# advanced-programming

./: CMakeLists.txt  tasks.txt
Battleship/: Battleship.VC.db  Battleship.sln  algorithm_naive.txt  ex2_final_grades.xls
Battleship/Battleship/: Battleship.vcxproj  Battleship.vcxproj.filters  CMakeLists.txt  IBattleshipGameAlgo.h  battle.cpp  battle.h  battle_utils.cpp  battle_utils.h  board.cpp  board.h  clean_movesA.attack-a  clean_movesB.attack-b  cmd_parser.cpp  cmd_parser.h  config.h  debug_utils.cpp  display.cpp  display.h  dummy.attack-b  error_class.cpp  error_class.h  file_algo.cpp  file_algo.h  file_parser.cpp  file_parser.h  gameManager.cpp  gameManager.h  macros.h  main.cpp  naiveAlgo.cpp  naiveAlgo.h  naive_algo.cpp  naive_algo.h  point.cpp  point.h  rand_pool.cpp  rand_pool.h  ships.cpp  ships.h  smartAlgo.cpp  (+7 more)
Battleship/Battleship/Debug/: vc140.idb
Battleship/Battleship/Debug/Battleship.tlog/: Battleship.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Battleship/Debug/: Battleship.ilk
Battleship/Project1/: Project1.vcxproj  Project1.vcxproj.filters
Battleship/naiveAlgo/: battle_utils.h  board.cpp  board.h  cmd_parser.cpp  cmd_parser.h  file_parser.cpp  file_parser.h  naiveAlgo.vcxproj  naiveAlgo.vcxproj.filters  naive_algo.cpp  naive_algo.h  point.h  ships.cpp  ships.h  state.h  status.h
Battleship/naive_algo/: naive_algo.vcxproj  naive_algo.vcxproj.filters
Battleship/smart_algo/: smart_algo.vcxproj  smart_algo.vcxproj.filters
Ex4/: Ex4.sln
Ex4/Ex4/: CMakeLists.txt  Ex4.vcxproj  Ex4.vcxproj.filters  main.cpp  matrix.h  point.h
